# library-service

./: .env  .gitmodules  Cargo.toml  Dockerfile
src/: main.rs
src/routes/: mod.rs  playlist.rs  user.rs
