[package]
name = "library-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
cache-lib = { path = "libs/cache-lib" }
database-lib = { path = "libs/database-lib" }
utils-lib = { path = "libs/utils-lib" }
domain = { path = "libs/domain-lib" }